Fix gap
Забирає всі gap з секцій footer i about. Не відображається на мак і опера

--- a/src/assets/scss/components/_modal-footer.scss
+++ b/src/assets/scss/components/_modal-footer.scss
@@ -132,6 +132,7 @@
   }
 
   &__button {
+    padding-left: 12px;
     color: var(--black-txt-cl);
     border: 1px solid transparent;
     border-radius: 100px;
@@ -140,16 +141,12 @@
     transition: border var(--transition-timing-function) var(--animation-speed);
     font-size: 18px;
     line-height: calc(30 / 18);
-    @media screen and (min-width: 330px) {
-      gap: 15px;
-    }
     @include mq(tablet) {
       font-size: 24px;
       line-height: calc(30 / 24);
     }
     @include mq(desktop) {
       padding-left: 26px;
-      gap: 20px;
       font-size: 30px;
       line-height: calc(32 / 30);
     }
@@ -159,6 +156,17 @@
       .modal-footer__icon {
         border: 1px solid transparent;
       }
+    }
+  }
+  &__span {
+    @media screen and (max-width: 330px) {
+      max-width: 120px;
+    }
+    @media screen and (min-width: 330px) {
+      margin-right: 12px;
+    }
+    @include mq(desktop) {
+      margin-right: 20px;
     }
   }
   &__icon {
